[gd_scene load_steps=2 format=3 uid="uid://d2dungeon8aa"]

[ext_resource type="Script" uid="uid://0cids4oxu0cl" path="res://scenes/ui/screens/DungeonScreen.gd" id="1_dungeon"]

[node name="DungeonScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dungeon")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 40
text = "⚔️ Zindanlar"

[node name="BackButton" type="Button" parent="MarginContainer/VBox/Header"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Geri"

[node name="TabButtons" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SoloButton" type="Button" parent="MarginContainer/VBox/TabButtons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Solo"

[node name="GroupButton" type="Button" parent="MarginContainer/VBox/TabButtons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Grup"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="DungeonList" type="VBoxContainer" parent="MarginContainer/VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15
